--- a/style.css
+++ b/style.css
@@ -144,20 +144,30 @@ button {
 .course{
     background-color: #a39f9f;
     padding: 32px 72px;
-    border: 1px solid red;
     display: flex;
     justify-content: center;
     gap: 32px;
     flex-wrap: wrap;
 }
 
-.description{
+.class{
+    width: 300px;
     background-color: #ffffff;
-    padding: 16px 16px;
-    margin: 0;
-    gap: 8px
+
 }
 
+.class img{
+    height: auto;
+    width: 100%;
+}
+
+.description{
+    padding: 16px 16px;
+}
+
+.name{
+    font-weight: bold;
+}
 
 
 /* THESIS */
