--- a/style.css
+++ b/style.css
@@ -226,9 +226,11 @@ footer .right ul{
 
 .mobileinformation .container{
     padding: 16px;
+    border-bottom: 1px dotted lightgray;
 }
 
-.mobileinformation .card{
+.mobileinformation .card,
+.mobilecourse{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -243,29 +245,83 @@ footer .right ul{
   width: 100%;
 }
 
+.mobilecourse{
+    padding: 16px 32px;
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0;
+    border-bottom: 1px dotted lightgray;
+}
+
+.mobilecourse h1,
+.mobilethesis h1{
+    margin: 0;
+    padding-bottom: 16px;
+}
+
+.mobilecourse p{
+    background-color: #dfdddd;
+    width: 100%;
+    padding: 16px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.mobilethesis video{
+    width: 100%;
+    height: 400px;
+}
+
+.mobilethesis{
+    text-align: center;
+}
+
+.mobilethesis h1{
+    padding-top: 16px;
+}
+
+.mobilefooter{
+    padding: 40px 16px 16px 16px;
+}
+
+.mobilefooter h3{
+    font-weight: 200;
+    font-size: 14px;
+    margin: 0;
+}
 
 @media only screen and (max-width:600px){
     nav,
     .banner,
-    .information{
+    .information,
+    .top,
+    .course,
+    .thesis,
+    footer{
         display: none;
     }
     .mobilenav,
     .mobilebanner,
-    .mobileinformation{
+    .mobileinformation,
+    .mobilecourse,
+    .mobilethesis,
+    .mobilefooter{
         display: flex;
     }
-    .mobilebanner{
+    .mobilebanner,
+    .mobilecourse,
+    .mobilethesis{
         flex-direction: column;
     }
-
-
 }
 
 @media only screen and (min-width:601px) {    
     .mobilenav,
     .mobilebanner,
-    .mobileinformation{
+    .mobileinformation,
+    .mobilecourse,
+    .mobilethesis,
+    .mobilefooter{
         display: none;
     }
 }
